Update v2.0.4  - Fixed Generic information being lost  - Fixed Majority of JVM crashes